Fix: UX/UI changes, bigger images, overflow on every modal disabled. Feat: Export list of products to xlsx

--- a/frontend/styles/catalogo.css
+++ b/frontend/styles/catalogo.css
@@ -16,6 +16,11 @@ body {
     color: white;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
+
 .barra-pesquisa-container {
   position: relative;
   display: flex;
@@ -166,7 +171,8 @@ body {
 #modalImage {
   max-width: 100%;
   max-height: 100%;
-  height: 250px;
+  height: 270px;
+  width: 230px;
   object-fit: cover;
   border-radius: 8px;
   margin-bottom: 15px;
@@ -451,4 +457,32 @@ body {
 .faq-conteudo p {
   margin-bottom: 10px;
   font-size: 0.95rem;
+}
+
+@media (min-width: 768px) {
+    .container-produtos {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .produto-itens img {
+        height: 220px; 
+    }
+
+    #modalImage {
+      height: 400px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .container-produtos {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .produto-itens img {
+        height: 400px; 
+    }
+
+    #modalImage {
+      height: 450px;
+    }
 }
